--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <a class="nav-link" href="/secciones/blog.html">Blog</a>
                     </li>
                     <li class="nav-item my-auto">
-                        <a class="nav-link" href="/login.html">Iniciar Sesión</a>
+                        <a class="nav-link" href="/login.html">Iniciar WENAS</a>
                     </li>
             
                 </ul>
