--- a/registro.html
+++ b/registro.html
@@ -17,21 +17,20 @@
             <h2 class="titulo c-marino mb-4">Crea tu cuenta</h2>
             
             <form action="procesar_registro.php" method="post">
-                <form action="procesar_registro.php" method="post">
-                    <div class="mb-3">
-                        <label for="username" class="form-label">Usuario:</label>
-                        <input type="text" class="form-control" id="username" name="username" placeholder="Ingresa tu usuario" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="password" class="form-label">Contraseña:</label>
-                        <input type="password" class="form-control" id="password" name="password" placeholder="Ingresa tu contraseña" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="phone" class="form-label">Número de teléfono:</label>
-                        <input type="text" class="form-control" id="phone" name="phone" placeholder="Ingresa tu número de teléfono" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary w-100">Registrarse</button>
-                </form>
+                <div class="mb-3">
+                    <label for="username" class="form-label">Usuario:</label>
+                    <input type="text" class="form-control" id="username" name="username" placeholder="Ingresa tu usuario" required>
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Contraseña:</label>
+                    <input type="password" class="form-control" id="password" name="password" placeholder="Ingresa tu contraseña" required>
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Correo electrónico:</label>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Ingresa tu correo electrónico" required>
+                </div>
+                <button type="submit" class="btn btn-primary w-100">Registrarse</button>
+            </form>
 
             <p class="mt-3">¿Ya tienes una cuenta? <a href="login.html" class="text-primary">Inicia sesión</a></p>
         </div>
