--- a/registro.html
+++ b/registro.html
@@ -14,7 +14,7 @@
         
         <!-- Cuadro celeste con formulario de registro -->
         <div class="mt-5 p-4 text-center" style="background-color: #add8e6; border-radius: 15px; width: 300px;">
-            <h2 class="titulo c-marino mb-4">Crea tu cuenta</h2>
+            <h2 class="titulo c-marino mb-4">Crea la cuenta</h2>
             
             <form action="procesar_registro.php" method="post">
                 <div class="mb-3">
