--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="password" class="form-label">Contraseña:</label>
-                    <input type="password" class="form-control" id="password" name="password" placeholder="Ingresa la contraseña" required>
+                    <input type="password" class="form-control" id="password" name="password" placeholder="Ingresa tu contraseña" required>
                 </div>
                 <button type="submit" class="btn btn-primary w-100">Ingresar</button>
             </form>
